[gd_scene load_steps=4 format=3 uid="uid://8ui13o8e1cmn"]

[ext_resource type="Script" path="res://upgrades/building_upgrade.gd" id="1_gpet6"]
[ext_resource type="Texture2D" uid="uid://cvwlv5khtboxl" path="res://sprites/dog_treat.png" id="2_ubvv4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_th575"]

[node name="Building" type="Node2D"]
script = ExtResource("1_gpet6")

[node name="BuildingSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_ubvv4")

[node name="RigidBody2D" type="RigidBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource("RectangleShape2D_th575")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="body_entered" from="RigidBody2D" to="." method="_on_rigid_body_2d_body_entered"]
